Suspend using UPower in case of ConsoleKit 1

REVIEW: 124778
BUG: 351365
FIXED-IN: 5.4.0